--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -18,32 +18,28 @@
 <!-- Load the `mapbox-gl-geocoder` plugin. -->
 <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
 <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
-{% if user.is_authenticated %}
+
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="nav-brand" href="/">NYC Accessible Streets</a>
         </div>
+        {% if user.is_authenticated %}
         <ul class="nav navbar-nav navbar-right">
-            <li><a class = "nav-list" href="accounts/help">Help</a></li>
-            <li><a class = "nav-list" href="accounts/logout"> Log Out</a></li>
+            <li><a class = "nav-list" href="#"> Hello {{user.first_name}}!</a></li>
+            <li><a class = "nav-list" href="accounts/help"><span class="glyphicon glyphicon-question-sign"></span> Help</a></li>
+            <li><a class = "nav-list" href="accounts/logout"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
         </ul>
-    </div>
-</nav>
-{% else %}
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="nav-brand" href="/">NYC Accessible Streets</a>
-        </div>
+        {% else %}
         <ul class="nav navbar-nav navbar-right">
-            <li><a class = "nav-list" href="accounts/help">Help</a></li>
+            <li><a class = "nav-list" href="accounts/help"><span class="glyphicon glyphicon-question-sign"></span> Help</a></li>
             <li><a class = "nav-list" href="accounts/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a class = "nav-list" href="accounts/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
+        {% endif%}
     </div>
 </nav>
-{% endif%}
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-4">
