--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -38,7 +38,7 @@
           </div>
 
           <div class="col-md-4">
-            <p class="results">5 results</p>
+            <p class="results">{{cardList|length}} results</p>
           </div>
         </div>
 
