help page form using crispy

--- a/landing_map/templates/common/navbar.html
+++ b/landing_map/templates/common/navbar.html
@@ -1,26 +1,20 @@
-{% if user.is_authenticated %}
+
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="nav-brand" href="/">NYC Accessible Streets</a>
         </div>
+        {% if user.is_authenticated %}
         <ul class="nav navbar-nav navbar-right">
-            <li><a class = "nav-list" href="#">Help</a></li>
-            <li><a class = "nav-list" href="accounts/logout"> Log Out</a></li>
+            <li><a class = "nav-list" href="/accounts/help"><span class="glyphicon glyphicon-question-sign"></span> Help</a></li>
+            <li><a class = "nav-list" href="/accounts/logout"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
         </ul>
+        {% else %}
+        <ul class="nav navbar-nav navbar-right">
+            <li><a class = "nav-list" href="/accounts/help"><span class="glyphicon glyphicon-user"></span> Help</a></li>
+            <li><a class = "nav-list" href="/accounts/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a class = "nav-list" href="/accounts/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        </ul>
+        {% endif %}
     </div>
 </nav>
-{% else %}
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="nav-brand" href="/">NYC Accessible Streets</a>
-        </div>
-        <ul class="nav navbar-nav navbar-right">
-            <li><a class = "nav-list" href="#">Help</a></li>
-            <li><a class = "nav-list" href="accounts/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a class = "nav-list" href="accounts/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        </ul>
-    </div>
-</nav>
-{% endif%}
