--- a/landing_map/templates/common/navbar.html
+++ b/landing_map/templates/common/navbar.html
@@ -6,6 +6,7 @@
         </div>
         {% if user.is_authenticated %}
         <ul class="nav navbar-nav navbar-right">
+            <li><a class = "nav-list" href="#"> Hi {{user.first_name}}!</a></li>
             <li><a class = "nav-list" href="/accounts/help"><span class="glyphicon glyphicon-question-sign"></span> Help</a></li>
             <li><a class = "nav-list" href="/accounts/logout"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
         </ul>
