Fixed page formatting; Added image to static folder; Added greeting to navbar for logged in users

--- a/accounts/templates/help.html
+++ b/accounts/templates/help.html
@@ -84,6 +84,7 @@
             {{helpform.message|as_crispy_field}}
         </div>
     </div>
+    <button class="btn btn-lg" type="submit">Submit</button>
 </form>
     </div>
 </body>
