--- a/landing_map/templates/common/navbar.html
+++ b/landing_map/templates/common/navbar.html
@@ -12,7 +12,7 @@
         </ul>
         {% else %}
         <ul class="nav navbar-nav navbar-right">
-            <li><a class = "nav-list" href="/accounts/help"><span class="glyphicon glyphicon-user"></span> Help</a></li>
+            <li><a class = "nav-list" href="/accounts/help"><span class="glyphicon glyphicon-question-sign"></span> Help</a></li>
             <li><a class = "nav-list" href="/accounts/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a class = "nav-list" href="/accounts/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
