--- a/landing_map/templates/landing_map/filterButton.html
+++ b/landing_map/templates/landing_map/filterButton.html
@@ -16,7 +16,7 @@
 
 
                     <!-- infrastructure displayed -->
-                    <p class="dropdown-item">displayed info</p>
+                    <p class="dropdown-item">Displayed info</p>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         <label class="form-check-label" for="flexCheckDefault">
@@ -37,7 +37,7 @@
                     </div>
 
                     <!-- status of infrastructure -->
-                    <p class="dropdown-item">status</p>
+                    <p class="dropdown-item">Status</p>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         <label class="form-check-label" for="flexCheckDefault">
@@ -49,6 +49,17 @@
                         <label class="form-check-label" for="flexCheckDefault">
                             currently inaccessible
                         </label>
+                    </div>
+
+                    <!-- select radius -->
+                    <p class="dropdown-item">Radius (in miles)</p>
+                    <div class="form-group">
+                      <input type="range" min="0" max="5"
+                        step="0.25"
+                        class="form-control-range"
+                        id="formControlRange"
+                        onChange="document.getElementById('rangeval').innerText = document.getElementById('formControlRange').value">
+                      <span id="rangeval">2.5<!-- Default value --></span>
                     </div>
 
                     <button class="dropdown-item btn btn-light shadow-none" id="clear" type="button">Clear</button>
