made filter button functional and added js functions to handle filter and query params

--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -64,6 +64,6 @@
 </script>
 
 <script src="{% static 'landing_map/maps.js' %} "></script>
-
+<script src="{% static 'landing_map/filter.js' %} "></script>
 </body>
 </html>
