--- a/landing_map/templates/landing_map/filterButton.html
+++ b/landing_map/templates/landing_map/filterButton.html
@@ -8,30 +8,30 @@
                 <div class="dropdown-menu">
 
                     <div class="form-check form-switch">
-                        <label class="form-check-label" id="fav" for="flexCheckDefault">
+                        <label class="form-check-label" id="favChecklabel" for="favChecklabel">
                             Favorites only
                         </label>
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <input class="form-check-input" type="checkbox" role="switch" id="favCheck">
                     </div>
 
 
                     <!-- infrastructure displayed -->
                     <p class="dropdown-item">Displayed info</p>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" id="rampsCheck" Checked>
+                        <label class="form-check-label" for="rampsCheck">
                             accessible ramps
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" id="poleCheck" Checked>
+                        <label class="form-check-label" for="poleCheck">
                             accessible pedestrian signals
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" id="sidewalkCheck" Checked>
+                        <label class="form-check-label" for="sidewalkCheck">
                             raised sidewalks
                         </label>
                     </div>
@@ -39,14 +39,14 @@
                     <!-- status of infrastructure -->
                     <p class="dropdown-item">Status</p>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" id="currentlyAccessibleCheck" Checked>
+                        <label class="form-check-label" for="currentlyAccessibleCheck">
                             currently accessible
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" id="currentlyInaccessibleCheck" Checked>
+                        <label class="form-check-label" for="currentlyInaccessibleCheck">
                             currently inaccessible
                         </label>
                     </div>
@@ -54,16 +54,16 @@
                     <!-- select radius -->
                     <p class="dropdown-item">Radius (in miles)</p>
                     <div class="form-group">
-                      <input type="range" min="0" max="5"
+                      <input type="range" min="0.25" max="5"
                         step="0.25"
                         class="form-control-range"
-                        id="formControlRange"
-                        onChange="document.getElementById('rangeval').innerText = document.getElementById('formControlRange').value">
+                        id="radiusRangeFilter"
+                        onChange="document.getElementById('rangeval').innerText = document.getElementById('radiusRangeFilter').value">
                       <span id="rangeval">2.5<!-- Default value --></span>
                     </div>
 
-                    <button class="dropdown-item btn btn-light shadow-none" id="clear" type="button">Clear</button>
-                    <button class="dropdown-item btn btn-primary shadow-none" type="button">Apply Filter</button>
+                    <button class="dropdown-item btn btn-light shadow-none" id="clear" type="button" onclick="clear_filters()">Clear</button>
+                    <button class="dropdown-item btn btn-primary shadow-none" type="button" onclick="redirect_to_url()">Apply Filter</button>
                 </div>
             </div>
         </div>
