Applying filter params to the checkboxes after reloading

--- a/landing_map/templates/landing_map/filterButton.html
+++ b/landing_map/templates/landing_map/filterButton.html
@@ -59,7 +59,7 @@
                         class="form-control-range"
                         id="radiusRangeFilter"
                         onChange="document.getElementById('rangeval').innerText = document.getElementById('radiusRangeFilter').value">
-                      <span id="rangeval">2.5<!-- Default value --></span>
+                      <span id="rangeval"></span>
                     </div>
 
                     <button class="dropdown-item btn btn-light shadow-none" id="clear" type="button" onclick="clear_filters()">Clear</button>
