--- a/landing_map/templates/landing_map/cardDetails.html
+++ b/landing_map/templates/landing_map/cardDetails.html
@@ -2,48 +2,11 @@
         <!-- details modal 1 -->
         <div class='cards'>
             {% for card in cardList %}
-            <div id="pin_{{card.card_id}}_details" class="modal fade" role="dialog">
-                <div class="modal-dialog">
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">{{card.text}}</h4>
-                        </div>
-                        <div class="modal-body">
-                            {% if card.ramp_count != 0 %}
-                                <p class="accessible">{{card.ramp_count}} accessible ramps</p>
-                            {% else %}
-                                <p class="not_accessible">0 accessible ramps</p>
-                            {% endif %}
-                            {% if card.signal_count != 0 %}
-                                <p class="accessible">{{card.signal_count}} accessible signals</p>
-                            {% else %}
-                                <p class="not_accessible">0 accessible signals</p>
-                            {% endif %}
-                            {% if card.isRampAccess == False and card.ramp_count != 0 %}
-                                <p class="not_accessible">User reported ramps not working at this intersection</p>
-                            {% else %}
-                                {% if card.ramp_count != 0 %}
-                                    <p class="accessible">All ramps are working at this intersection</p>
-                                {% endif %}
-                            {% endif %}
-                            {% if card.isSignalAccess == False and card.signal_count != 0 %}
-                                <p class="not_accessible">User reported signals not working at this intersection</p>
-                            {% else %}
-                                {% if card.signal_count != 0 %}
-                                    <p class="accessible">All signals are working at this intersection</p>
-                                {% endif %}
-                            {% endif %}
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {% include 'landing_map/detailModal.html' %}
+            {% include 'landing_map/reportModal.html' %}
+
             <!-- Pin cards -->
-            <div class="well well-lg" data-toggle="modal" data-target="#pin_{{card.card_id}}_details">
+            <div class="well well-lg" >
                 <h4>{{card.text}}</h4>
                 {% if card.ramp_count != 0 %}
                     <p class="accessible">{{card.ramp_count}} accessible ramps</p>
@@ -55,9 +18,14 @@
                 {% else %}
                     <p class="not_accessible">0 accessible signals</p>
                 {% endif %}
-                <button type="button" class="btn btn-default btn-sm">
-                    <span class="glyphicon glyphicon-star"></span> Star
+
+                <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#pin_{{card.card_id}}_details">
+                    view issue
                 </button>
+                <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#report_issue_form">
+                    report issue
+                </button>
+                
             </div>
             {% endfor %}
         </div>
