--- a/landing_map/templates/landing_map/reportModal.html
+++ b/landing_map/templates/landing_map/reportModal.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="report_issue_form" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
 
         <div class="modal-header">
@@ -33,7 +33,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">submit report</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Submit Report</button>
         </div>
       </div>
     </div>
