--- a/landing_map/templates/landing_map/cardDetails.html
+++ b/landing_map/templates/landing_map/cardDetails.html
@@ -19,10 +19,12 @@
             <p class="not_accessible">0 accessible signals</p>
         {% endif %}
 
-        <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#pin_{{card.card_id}}_details">
+        <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#pin_{{card.card_id}}_details"
+                style=" background-color:#884515; color:white">
             view issue
         </button>
-        <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#report_issue_form">
+        <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#report_issue_form"
+                style=" background-color:#18435A; color:white">
             report issue
         </button>
         
