--- a/landing_map/templates/landing_map/reportModal.html
+++ b/landing_map/templates/landing_map/reportModal.html
@@ -33,7 +33,8 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" data-dismiss="modal" style=" background-color:#18435A; color:white">Submit Report</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal" style=" background-color:#18435A; color:white;">
+            Submit Report</button>
         </div>
       </div>
     </div>
