--- a/landing_map/templates/landing_map/detailModal.html
+++ b/landing_map/templates/landing_map/detailModal.html
@@ -6,34 +6,38 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">{{card.text}}</h4>
             </div>
-            <div class="modal-body">
-                {% if card.ramp_count != 0 %}
-                    <p class="accessible">{{card.ramp_count}} accessible ramps</p>
-                {% else %}
-                    <p class="not_accessible">0 accessible ramps</p>
-                {% endif %}
-                {% if card.signal_count != 0 %}
-                    <p class="accessible">{{card.signal_count}} accessible signals</p>
-                {% else %}
-                    <p class="not_accessible">0 accessible signals</p>
-                {% endif %}
-                {% if card.isRampAccess == False and card.ramp_count != 0 %}
-                    <p class="not_accessible">User reported ramps not working at this intersection</p>
-                {% else %}
-                    {% if card.ramp_count != 0 %}
-                        <p class="accessible">All ramps are working at this intersection</p>
-                    {% endif %}
-                {% endif %}
-                {% if card.isSignalAccess == False and card.signal_count != 0 %}
-                    <p class="not_accessible">User reported signals not working at this intersection</p>
-                {% else %}
-                    {% if card.signal_count != 0 %}
-                        <p class="accessible">All signals are working at this intersection</p>
-                    {% endif %}
-                {% endif %}
+
+            <div class="modal-body row">
+                <div class="col-md-6">
+                    <img src="/static/img/map_dummy.png" alt="dummy image for map" width="280" height="280">
+                </div>
+                
+                <div class="col-md-6 ml-auto view-report">
+
+                    <h5>issue: </h5>
+                    <p class="not_accessible">inaccessible ramp</p>
+
+                    <h5>description: </h5>
+                    <p>street corner under construction until October 23rd, ramps are blocked</p>
+
+                    <h5>time reported: </h5>
+                    <p>7:20AM, October 20th 2022</p>
+
+                </div>  
+                
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default thumbs"> 
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    7
+                </button>
+                <button type="button" class="btn btn-default thumbs"> 
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    1
+                </button>
+
+                <button type="button" class="btn btn-default" data-dismiss="modal" style="background-color:#4F7C5E; color:white; width: 25%">
+                    Mark as restored</button>
             </div>
         </div>
     </div>
