--- a/static/accounts/style.css
+++ b/static/accounts/style.css
@@ -36,3 +36,107 @@ h6{
     margin-top: 25px;
     margin-bottom: 25px;
 }
+
+.container-fluid{
+    padding-left: 0;
+    padding-right: 0;
+}
+
+nav.navbar{
+    background-color:#18435A;
+    height: 75px;
+}
+
+a.nav-brand {
+    color: #FFFFFF;
+    font-size:1.34em;
+    font-weight: bold;
+    text-decoration: none;
+    height: 75px;
+    line-height: 75px;
+}
+
+a.nav-list{
+    color: #FFFFFF !important;
+    font-size:0.9em;
+    text-decoration: none;
+    height: 75px !important;
+    line-height: 40px !important;
+    padding-left: 45px;
+}
+
+a.nav-brand:hover{
+    opacity: 0.5;
+}
+
+a.nav-list:hover{
+    opacity: 0.5;
+}
+
+div.cards{
+    height:500px;
+    overflow-y: scroll
+}
+p.accessible{
+    color:#4F7C5E;}
+p.not_accessible{
+    color:#BC4F00;}
+#map {
+    height: 600px;
+}
+
+/* filter button styling */
+.filter{
+    position: relative;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+}
+
+.filter p{
+    font-weight: bold;
+    margin-right: auto;
+    margin-top: 10px;
+}
+
+.filter button{
+    margin-left: auto;
+    width: 100px;
+    background-color: #18435A;
+}
+
+/* dropdown menu */
+.dropdown-menu{
+    padding: 20px;
+    width: 300px;
+}
+
+.dropdown-menu button{
+    margin-top: 20px;
+    width: 125px;
+    background-color: #18435A;
+}
+
+.dropdown-menu #clear{
+    background-color: transparent;
+    color: #18435A;
+    font-weight: bold;
+}
+
+.dropdown-menu .form-check label{
+    font-weight: 400;
+}
+
+.dropdown-menu .form-check #fav{
+    font-weight: bold;
+    /* margin-right: 100px; */
+}
+
+.results {
+    float: right !important;
+    padding-top: 15px !important;
+}
+.mapboxgl-ctrl-geocoder {
+    width: 100% !important;
+    max-width: 100% !important;
+}
