--- a/static/landing_map/style.css
+++ b/static/landing_map/style.css
@@ -2,15 +2,32 @@
 /* navbar styling */
 nav.navbar{
     background-color:#18435A;
-    }
+}
+
 a.nav-brand {
     color: #FFFFFF;
-    font-size:2em;
+    font-size: 1.5em;
+    font-weight: bold;
+    text-decoration: none;
+    height: 75px;
+    line-height: 75px;
 }
 
 a.nav-list{
     color: #FFFFFF !important;
-    font-size:1.2em;
+    font-size:1em;
+    text-decoration: none;
+    height: 75px !important;
+    line-height: 40px !important;
+    padding-left:30px !important;
+}
+
+a.nav-brand:hover{
+    opacity: 0.5;
+}
+
+a.nav-list:hover{
+    opacity: 0.5;
 }
 
 /* pin card styling */
