--- a/landing_map/templates/landing_map/filterButton.html
+++ b/landing_map/templates/landing_map/filterButton.html
@@ -11,7 +11,7 @@
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="rampsCheck" Checked>
                         <label class="form-check-label" for="rampsCheck">
-                            accessible ramps
+                            accessible pedestrian ramps
                         </label>
                     </div>
                     <div class="form-check">
