--- a/landing_map/templates/landing_map/filterButton.html
+++ b/landing_map/templates/landing_map/filterButton.html
@@ -6,53 +6,55 @@
                     </button>
 
                 <div class="dropdown-menu">
-
-                    <div class="form-check form-switch">
-                        <label class="form-check-label" id="fav" for="flexCheckDefault">
-                            Favorites only
-                        </label>
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                    </div>
-
-
                     <!-- infrastructure displayed -->
-                    <p class="dropdown-item">displayed info</p>
+                    <p class="dropdown-item">Displayed info</p>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
-                            accessible ramps
+                        <input class="form-check-input" type="checkbox" id="rampsCheck" Checked>
+                        <label class="form-check-label" for="rampsCheck">
+                            accessible pedestrian ramps
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" id="poleCheck" Checked>
+                        <label class="form-check-label" for="poleCheck">
                             accessible pedestrian signals
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" id="sidewalkCheck" Checked>
+                        <label class="form-check-label" for="sidewalkCheck">
                             raised sidewalks
                         </label>
                     </div>
 
                     <!-- status of infrastructure -->
-                    <p class="dropdown-item">status</p>
+                    <p class="dropdown-item">Status</p>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" id="currentlyAccessibleCheck" Checked>
+                        <label class="form-check-label" for="currentlyAccessibleCheck">
                             currently accessible
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" id="currentlyInaccessibleCheck" Checked>
+                        <label class="form-check-label" for="currentlyInaccessibleCheck">
                             currently inaccessible
                         </label>
                     </div>
 
-                    <button class="dropdown-item btn btn-light shadow-none" id="clear" type="button">Clear</button>
-                    <button class="dropdown-item btn btn-primary shadow-none" type="button">Apply Filter</button>
+                    <!-- select radius -->
+                    <p class="dropdown-item">Radius (in miles)</p>
+                    <div class="form-group">
+                      <input type="range" min="0.25" max="5"
+                        step="0.25"
+                        class="form-control-range"
+                        id="radiusRangeFilter"
+                        onChange="document.getElementById('rangeval').innerText = document.getElementById('radiusRangeFilter').value">
+                      <span id="rangeval"></span>
+                    </div>
+
+                    <button class="dropdown-item btn btn-light shadow-none" id="clear" type="button" onclick="clear_filters()">Clear</button>
+                    <button class="dropdown-item btn btn-primary shadow-none" type="button" onclick="redirect_to_url()">Apply Filter</button>
                 </div>
             </div>
         </div>
