url path updates to include landing page

--- a/landing_map/templates/landing_map/landingpage.html
+++ b/landing_map/templates/landing_map/landingpage.html
@@ -1,3 +1,19 @@
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Landing</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="shortcut icon" href="{%  static 'img/favicon.ico' %}">
+</head>
+
+<body>
+
+<!-- navigation bar -->
 <nav class="navbar navbar-inverse navba">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -18,3 +34,6 @@
         {% endif %}
     </div>
 </nav>
+
+</body>
+</html>
